# gamed

./: .gitignore  Makefile  TODO  gamed.conf  run.py
Gamed/: x
Gamed/clib/: client.c  client.h
Gamed/lib/: Gamed.pm  Makefile  Plugins.pm  Support.pm  WebSocket.pm  client.c  client.h  support.c  x
Gamed/t/: .Gamed.t.swp  Card.t  Color.t  Deck.t  Gamed.t  HiLo.t  Support.t  WebSocket.t
clients/: Makefile
clients/HTML5/: text.html  websock.html
clients/SpeedRisk/: Makefile  main.cc  mock.scr
clients/java/: Makefile  build.pl  build.xml  index.html
clients/perl6/: Commands.pm  Game.pm  input.c  ncurses.pm  ncurses_client.pm  play  test_ncurses
clients/py-SpeedRisk/: Borders.py  Client.py  Constants.py  SpeedRisk.py  SpeedRiskClient.py  alignment.py  alpha.py  alter.c  colorspace.py  config.ini  main.py  make_exe.bat  observing.py  sample_bot.py  setup.py
clients/py-wxSpeedRisk/: SpeedRisk.py
cpp/: Makefile  gamed.conf
cpp/games/: Makefile
cpp/server/: .gitignore  Makefile  command.h  functions.c  server.c  server.h
games/: HiLo.cc  Makefile
rust/: Cargo.toml
rust/gamed/: Cargo.toml
rust/gamed/examples/hi_lo/: main.rs
rust/gamed/src/: client.rs  game_instances.rs  gamed.rs  lib.rs  listener.rs  lock_list.rs  state.rs
rust/gamed/src/game/: lobby.rs  mod.rs
server/: Makefile  command.c  command.h  config.c  core  event.h  functions.c  gamed.conf  gamed.conf.sample  main.c  server.c  server.h
src/: Makefile  cards.cc  command.c  main.c  main.cc  server.c  server.cc  utils.cc
test/: Makefile  mocks.h  t_dispatcher.h  t_server.h
(+275 files in other folders)
